refactor: Change center to Central Park and add Google Static Panorama request to get thumbnails for each location

--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,17 @@
   width: 100%;
 }
 
+
+@media screen and (max-width: 646px) {
+  .sidebar ~ .content .nav-header {
+    display: none;
+  }
+
+  .sidebar.hide ~ .content .nav-header {
+    display: flex;
+  }
+}
+
 @media screen and (max-width: 465px) {
   .content > .navbar > .btn {
     text-align: center;
