refactor: Change buttons' background to give a11y foreground/background contrast

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,14 @@
   right: 0;
 }
 
+.bg-contrast {
+  background-color: #0C5E69;
+}
+
+.bg-contrast:hover {
+  background-color: #073940
+}
+
 .sidebar,
 .sidebar .container {
   display: flex;
