--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,13 @@
   width: 100%;
 }
 
+#venues-list {
+  height: 90vh;
+  width: 100%;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
 
 @media screen and (max-width: 646px) {
   .sidebar ~ .content .nav-header {
